--- a/src/VotingPage/VotingPage.css
+++ b/src/VotingPage/VotingPage.css
@@ -8,9 +8,20 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin-top: 250px;
+  margin-top: 100px;
 }
 
 .vote-buttons {
-margin-top: 20px;
+  margin-top: 20px;
+}
+
+.judge-para {
+  font-family: 'Sawarabi Mincho', serif;
+  font-size: 30px;
+  text-align: center;
+  margin-top:30px;
+} 
+
+.cover-img {
+  height: 320px;
 }
