--- a/src/VotingPage/VotingPage.css
+++ b/src/VotingPage/VotingPage.css
@@ -2,6 +2,7 @@
   font-family: 'Sawarabi Mincho', serif;
   margin-left: 10px;
   font-size: 35px;
+  color: white;
 }
 
 .cover-section {
@@ -15,11 +16,19 @@
   margin-top: 20px;
 }
 
+.vote-button {
+  border: none;
+  font-size: 30px;
+  padding: 20px;
+  cursor: pointer;
+}
+
 .judge-para {
   font-family: 'Sawarabi Mincho', serif;
   font-size: 30px;
   text-align: center;
   margin-top:30px;
+  color: white;
 } 
 
 .cover-img {
@@ -34,5 +43,9 @@
 .saved-button {
   cursor: pointer;
   height: 30px;
-  margin-top: 20px;
+  margin: 30px 20px 0 0;
+  color: white;
+  border: none;
+  font-family: 'Sawarabi Mincho', serif;
+  font-size: 20px;
 }
