--- a/src/VotingPage/VotingPage.css
+++ b/src/VotingPage/VotingPage.css
@@ -1,8 +1,13 @@
+.vote-container {
+  background-image: url("../paper.jpg");
+}
+
 .app-name {
   font-family: 'Sawarabi Mincho', serif;
   margin-left: 10px;
   font-size: 35px;
-  color: white;
+  color: black;
+  text-shadow: 1px 1px rgb(233, 214, 214);
 }
 
 .cover-section {
@@ -21,6 +26,7 @@
   font-size: 30px;
   padding: 20px;
   cursor: pointer;
+  background: none;
 }
 
 .judge-para {
@@ -28,7 +34,8 @@
   font-size: 30px;
   text-align: center;
   margin-top:30px;
-  color: white;
+  color: black;
+  text-shadow: 1px 1px rgb(233, 214, 214);
 } 
 
 .cover-img {
@@ -44,8 +51,11 @@
   cursor: pointer;
   height: 30px;
   margin: 30px 20px 0 0;
-  color: white;
+  color: black;
   border: none;
   font-family: 'Sawarabi Mincho', serif;
   font-size: 20px;
+  background: none;
+  font-weight: bold;
+  text-shadow: 1px 1px rgb(233, 214, 214);
 }
