--- a/src/VotingPage/VotingPage.css
+++ b/src/VotingPage/VotingPage.css
@@ -6,8 +6,8 @@
   font-family: 'Sawarabi Mincho', serif;
   margin-left: 10px;
   font-size: 35px;
-  color: black;
-  text-shadow: 1px 1px rgb(233, 214, 214);
+  color: white;
+  text-shadow: 2px 2px rgb(29, 27, 27);
 }
 
 .cover-section {
@@ -34,8 +34,8 @@
   font-size: 30px;
   text-align: center;
   margin-top:30px;
-  color: black;
-  text-shadow: 1px 1px rgb(233, 214, 214);
+  color: white;
+  text-shadow: 2px 2px rgb(29, 27, 27);
 } 
 
 .cover-img {
@@ -51,11 +51,10 @@
   cursor: pointer;
   height: 30px;
   margin: 30px 20px 0 0;
-  color: black;
   border: none;
   font-family: 'Sawarabi Mincho', serif;
   font-size: 20px;
   background: none;
-  font-weight: bold;
-  text-shadow: 1px 1px rgb(233, 214, 214);
+  color: white;
+  text-shadow: 2px 2px rgb(29, 27, 27);
 }
