--- a/src/VotingPage/VotingPage.css
+++ b/src/VotingPage/VotingPage.css
@@ -25,9 +25,10 @@
 .vote-button {
   border: none;
   font-size: 30px;
-  padding: 20px;
+  padding: 30px;
   cursor: pointer;
   background: none;
+  text-decoration: underline;
 }
 
 .judge-para {
