--- a/src/SavedPage/SavedPage.css
+++ b/src/SavedPage/SavedPage.css
@@ -34,6 +34,7 @@
   cursor: pointer;
   height: 30px;
   margin-left: 90%;
+  padding: 15px;
   border: none;
   font-family: 'Sawarabi Mincho', serif;
   font-size: 20px;
