--- a/src/SavedPage/SavedPage.css
+++ b/src/SavedPage/SavedPage.css
@@ -1,12 +1,19 @@
+.app-name-saved {
+  font-family: 'Sawarabi Mincho', serif;
+  margin-left: 10px;
+  font-size: 35px;
+  color: black;
+  text-shadow: 3px 3px white;
+}
 
 .to-read {
   font-family: 'Sawarabi Mincho', serif;
-  text-align: center;
   text-decoration: underline;
   color: white;
   text-shadow: 2px 2px rgb(29, 27, 27);
   background-color:rgb(87, 136, 122);
   font-size: 30px;
+  margin-top: 60px;
 }
 
 .cover-title {
@@ -29,11 +36,9 @@
   padding-left: 3%;
 }
 
-
 .back-button {
   cursor: pointer;
-  height: 30px;
-  margin-left: 90%;
+  margin-top: 20px;
   padding: 15px;
   border: none;
   font-family: 'Sawarabi Mincho', serif;
@@ -46,6 +51,8 @@
 
 .nav-bar {
   background-color: rgb(87, 136, 122);
+  display: flex;
+  justify-content: space-between;
 }
 
 .delete-button {
@@ -55,17 +62,23 @@
   cursor: pointer;
 }
 
-
-@media only screen and (min-device-width: 320px) and (max-device-width: 520px) {
+@media only screen and (min-device-width: 320px) and (max-device-width: 600px) {
   .back-button {
-    font-size: 18px;
-    margin-left: 70%;
-    margin-top:20px;
+    font-size: 15px;
+    width:70px;
   }
 }
 
-@media only screen and (min-device-width: 320px) and (max-device-width: 520px) {
+@media only screen and (min-device-width: 320px) and (max-device-width: 600px) {
   .to-read {
     font-size: 25px;
+    padding-top: 40px;
+  }
+}
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 600px) {
+  .app-name-saved {
+    font-size: 30px;
+    width: 100px;
   }
 }
